[gd_scene load_steps=2 format=3 uid="uid://dfh04p7mjim88"]

[ext_resource type="Script" uid="uid://c5hj1x7irapt4" path="res://scripts/game_over.gd" id="1_8k4m2"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8k4m2")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.380392, 0.141176, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="GameOverLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Game Over!"
horizontal_alignment = 1

[node name="ResultsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="FirstPlace" type="Label" parent="VBoxContainer/ResultsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_font_sizes/font_size = 32
text = "ðŸ¥‡ 1st Place: Player"
horizontal_alignment = 1

[node name="SecondPlace" type="Label" parent="VBoxContainer/ResultsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.752941, 0.752941, 0.752941, 1)
theme_override_font_sizes/font_size = 28
text = "ðŸ¥ˆ 2nd Place: Bot 1"
horizontal_alignment = 1

[node name="ThirdPlace" type="Label" parent="VBoxContainer/ResultsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.803922, 0.498039, 0.196078, 1)
theme_override_font_sizes/font_size = 24
text = "ðŸ¥‰ 3rd Place: Bot 2"
horizontal_alignment = 1

[node name="FourthPlace" type="Label" parent="VBoxContainer/ResultsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "4th Place: Bot 3"
horizontal_alignment = 1

[node name="PlayAgainButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Play Again"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Main Menu"
